@@ -1,3 +1,7 @@
+## 0.x.x / 2018-xx-xx
+
+* [ENHANCEMENT] (Brigade) Update to Brigade v0.16.
+
 ## 0.5.2 / 2018-08-04
 
 * [ENHANCEMENT] (Brigade) Add the ability to rerun a build.
